--- a/src/app/dashboard/menu/menu.component.css
+++ b/src/app/dashboard/menu/menu.component.css
@@ -3,3 +3,39 @@ h3 {
     font-weight: 600;
     margin-bottom: 20px;
 }
+  
+  /* Estilos para las tarjetas de servicios */
+  .card.service-card {
+    border: none;
+    transition: transform 0.3s;
+    border-radius: 15px;
+  }
+  
+  .card.service-card:hover {
+    transform: scale(1.03);
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+  }
+  
+  .card.service-card .card-body {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+  
+  .card.service-card .card-title {
+    font-size: 1.5rem;
+    margin-bottom: 10px;
+  }
+  
+  .card.service-card .card-text {
+    font-size: 1.2rem;
+    color: #555;
+  }
+  
+  .card.service-card img.card-img-top {
+    width: 100%;
+    border-bottom-left-radius: 15px;
+    border-bottom-right-radius: 15px;
+  }
+  /* Estilos para el menú de navegación */
+  
