--- a/src/app/dashboard/servicios/servicios.component.html
+++ b/src/app/dashboard/servicios/servicios.component.html
@@ -45,7 +45,7 @@ ul.list-unstyled {
 
 
 </style>
-<div class="container">
+<div class="container" id="servicios">
     <div class="row">
       <div class="col-md-4">
         <div class="card mb-4 shadow">
@@ -53,14 +53,14 @@ ul.list-unstyled {
             <h4 class="my-0 font-weight-normal">Plan Básico</h4>
           </div>
           <div class="card-body">
-            <h1 class="card-title pricing-card-title">50€ <small class="text-muted">/ página</small></h1>
+            <h1 class="card-title pricing-card-title">100€ <small class="text-muted">/ página</small></h1>
             <ul class="list-unstyled mt-3 mb-4">
-              <li>Diseño y desarrollo de 1 página web</li>
-              <li>1 usuario administrador</li>
-              <li>Soporte por correo electrónico</li>
-              <li>Acceso a plantillas básicas personalizadas</li>
+              <li>Diseño y desarrollo de una pagina web estatica</li>
+              <li>Pagina web ideal para información de tu negocio</li>
+              <li>Posicionate ante negocios de su ciudad que no tienen pagina web</li>
+              <li>Dominio propio</li>
             </ul>
-            <button type="button" class="btn btn-lg btn-block btn-outline-primary">Contratar</button>
+            <button type="button" class="btn btn-lg btn-block btn-outline-primary"><a href="https://forms.gle/xJD4dHEc6sCGjrwS9" target="_blank" style="text-decoration: none; color: inherit;">Contratar</a></button>
           </div>
         </div>
       </div>
@@ -70,14 +70,14 @@ ul.list-unstyled {
             <h4 class="my-0 font-weight-normal">Plan Estándar</h4>
           </div>
           <div class="card-body">
-            <h1 class="card-title pricing-card-title">100€ <small class="text-muted">/ página</small></h1>
+            <h1 class="card-title pricing-card-title">600€ <small class="text-muted">/ página</small></h1>
             <ul class="list-unstyled mt-3 mb-4">
-              <li>Diseño y desarrollo de hasta 3 páginas web</li>
-              <li>3 usuarios administradores</li>
-              <li>Soporte por correo electrónico y telefónico</li>
-              <li>Acceso a plantillas avanzadas personalizadas</li>
+              <li>Muestra tus productos al mundo</li>
+              <li>Pedidos y sistema de inventario</li>
+              <li>Diseño unico y distintivo para marcar la diferencia</li>
+              <li>Dominio propio</li>
             </ul>
-            <button type="button" class="btn btn-lg btn-block btn-warning secondary">Contratar</button>
+            <button type="button" class="btn btn-lg btn-block btn-outline-warning"><a href="https://forms.gle/xJD4dHEc6sCGjrwS9" target="_blank" style="text-decoration: none; color: inherit;">Contratar</a></button>
           </div>
         </div>
       </div>
@@ -87,14 +87,15 @@ ul.list-unstyled {
             <h4 class="my-0 font-weight-normal">Plan Premium</h4>
           </div>
           <div class="card-body">
-            <h1 class="card-title pricing-card-title">200€ <small class="text-muted">/ página</small></h1>
+            <h1 class="card-title pricing-card-title">800€ <small class="text-muted">/ página</small></h1>
             <ul class="list-unstyled mt-3 mb-4">
-              <li>Diseño y desarrollo de hasta 5 páginas web</li>
-              <li>5 usuarios administradores</li>
-              <li>Soporte por correo electrónico, telefónico y chat en vivo</li>
-              <li>Acceso a plantillas premium personalizadas</li>
+              <li>Muestra tus productos al mundo</li>
+              <li>Pedidos y sistema de inventario</li>
+              <li>Diseño unico y distintivo para marcar la diferencia</li>
+              <li>Dominio propio</li>
+              <li>Soporte total y sin renovacion de dominio</li>
             </ul>
-            <button type="button" class="btn btn-lg btn-block btn-success">Contratar</button>
+            <button type="button" class="btn btn-lg btn-block btn-outline-success"><a href="https://forms.gle/xJD4dHEc6sCGjrwS9" target="_blank" style="text-decoration: none; color: inherit;">Contratar</a></button>
           </div>
         </div>
       </div>
