--- a/src/app/dashboard/menu/menu.component.html
+++ b/src/app/dashboard/menu/menu.component.html
@@ -1,43 +1,4 @@
-<style>
-/* Estilos para el menú de navegación */
-.navbar {
-  border-radius: 10px;
-  /* Agregar cualquier otro estilo que desees para el menú de navegación */
-}
-
-.navbar-toggler {
-  border: none;
-  /* Agregar cualquier otro estilo que desees para el botón del menú */
-}
-
-.navbar-toggler .navbar-toggler-icon {
-  /* Estilos para el ícono del botón de menú */
-  background-image: url('data:image/svg+xml;utf8,<svg viewBox="0 0 30 30" xmlns="http://www.w3.org/2000/svg"><path stroke="rgba(255, 255, 255, 0.8)" stroke-width="2" stroke-linecap="round" stroke-miterlimit="10" d="M4 7h22M4 15h22M4 23h22"/></svg>');
-  /* Asegúrate de incluir un icono SVG válido para el botón del menú */
-}
-
-.navbar-nav .nav-item {
-  margin: 0 15px;
-  /* Ajusta los márgenes para los elementos de la lista según tu preferencia */
-}
-
-.nav-link {
-  transition: color 0.3s;
-  /* Cambia el color de los enlaces al pasar el ratón por encima si lo deseas */
-}
-
-.nav-link:hover {
-  color: #ffc107; /* Cambia el color al pasar el ratón por encima si lo deseas */
-}
-
-@media (max-width: 992px) {
-  .navbar-nav .nav-item {
-    margin: 10px 0;
-    /* Cambia los márgenes en pantallas más pequeñas si es necesario */
-  }
-}
-</style>
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar navbar-expand-lg navbar-dark" style="background-color:#007bff;">
   <div class="container-fluid">
     <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -45,29 +6,28 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ms-auto">
         <li class="nav-item">
-          <a class="nav-link text-white fs-4 fs-lg-5" routerLink="/dashboard/inicio">Inicio</a>
+          <a class="nav-link text-white fs-4 fs-lg-5" href="#inicio">Inicio</a>
         </li>
         <li class="nav-item" style="margin-right: 0;">
-          <a class="nav-link text-white fs-4 fs-lg-5" routerLink="/dashboard/quienesSomos" style="max-width: 120px;">
-            <span style="text-align: center; display: block;">¿Quiénes</span>
-            <span style="text-align: center; display: block;">Somos?</span>
+          <a class="nav-link text-white fs-4 fs-lg-5" href="#quienesSomos">
+           ¿Quiénes Somos?
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-white fs-4 fs-lg-5" routerLink="/dashboard/servicios">Servicios</a>
+          <a class="nav-link text-white fs-4 fs-lg-5" href="#servicios">Servicios</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-white fs-4 fs-lg-5" routerLink="/dashboard/contacto">Contacto</a>
+          <a class="nav-link text-white fs-4 fs-lg-5" href="#contacto">Contacto</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-white fs-4 fs-lg-5" routerLink="/dashboard/ayuda">Ayuda</a>
+          <a class="nav-link text-white fs-4 fs-lg-5" href="#ayuda">Ayuda</a>
         </li>
       </ul>
     </div>
   </div>
 </nav>
 
-<div class="container">
+<div class="container" id="inicio">
   <div class="jumbotron text-center" style="background-color: #444141; color: white; border-radius: 15px;">
     <h1>¡Dispara el Crecimiento de tu Negocio con una Presencia Online Única!</h1>
     <p>Genera impacto y atrae clientes potenciales con nuestra especialidad: creación de páginas web a medida para potenciar tu marca y aumentar 
