--- a/src/app/quienes-somos/quienes-somos.component.html
+++ b/src/app/quienes-somos/quienes-somos.component.html
@@ -70,7 +70,7 @@
     <div class="row">
         <div class="col-lg-8 offset-lg-1 d-flex justify-content-center align-items-center">
             <div class="col-lg-4 pr-lg-5 d-none d-lg-block">
-                <img src="../../assets/idea.png" class="img-fluid" alt="Imagen de la empresa">
+                <img src="assets/idea.png" class="img-fluid" alt="Imagen de la empresa">
             </div>
             <div class="col-lg-8 text-center">
                 <h2>¿Quiénes Somos?</h2>
