--- a/src/app/dashboard/contacto/contacto.component.html
+++ b/src/app/dashboard/contacto/contacto.component.html
@@ -17,7 +17,7 @@
     <div class="row">
         <div class="col-lg-9 offset-lg-1 d-flex justify-content-center align-items-center">
             <div class="col-lg-3 pr-lg-5 d-none d-lg-block">
-                <img src="../../../assets/10490231.png" class="img-fluid" alt="Imagen de contacto">
+                <img src="assets/10490231.png" class="img-fluid" alt="Imagen de contacto">
             </div>
             <div class="col-lg-7 text-center text-content">
                 <h2 align="left">Datos de Contacto</h2>
