--- a/src/app/dashboard/menu/menu.component.html
+++ b/src/app/dashboard/menu/menu.component.html
@@ -39,7 +39,7 @@
           <div class="card-body">
               <h3 class="card-title">Diseño Exclusivo para tu Negocio</h3>
               <p class="card-text">Potenciamos tu presencia en línea con sitios web estéticamente atractivos y personalizados para reflejar la identidad de tu negocio.</p>
-              <img src="../../../assets/2.png" class="card-img-top" alt="Imagen 1">
+              <img src="assets/2.png" class="card-img-top" alt="Imagen 1">
           </div>
       </div>
   </div>
@@ -49,7 +49,7 @@
           <div class="card-body">
               <h3 class="card-title">Desarrollo Rápido y Eficaz</h3>
               <p class="card-text">Creamos sitios web que potencian la imagen de tu negocio con un enfoque rápido y eficaz, adaptados a tus necesidades y expectativas.</p>
-              <img src="../../../assets/3.png" class="card-img-top" alt="Imagen 2">
+              <img src="assets/3.png" class="card-img-top" alt="Imagen 2">
           </div>
       </div>
   </div>
@@ -59,7 +59,7 @@
           <div class="card-body">
               <h3 class="card-title">Optimización y Mantenimiento Continuo</h3>
               <p class="card-text">Ofrecemos planes personalizados para el mantenimiento y la optimización constante de tu página web, garantizando su funcionalidad y rendimiento a largo plazo.</p>
-              <img src="../../../assets/4.png" class="card-img-top" alt="Imagen 3">
+              <img src="assets/4.png" class="card-img-top" alt="Imagen 3">
           </div>
       </div>
   </div>
