--- a/src/app/dashboard/contacto/contacto.component.html
+++ b/src/app/dashboard/contacto/contacto.component.html
@@ -26,8 +26,9 @@
                     <p><strong>Teléfono:</strong> +34 644001157</p>
                     <p><strong>Redes sociales:</strong></p>
                     <ul class="list-unstyled" style="font-size: 1.2em;">
-                        <li><strong><i class="fab fa-instagram"></i> Instagram: <a href="https://www.instagram.com/tupaginaweb" target="_blank">tupaginaweb</a></strong></li>
+                        <li><strong><i class="fab fa-instagram"></i> Instagram: <a href="https://www.instagram.com/tupaginawebonline/" target="_blank">tupaginaweb</a></strong></li>
                         <li><strong><i class="fab fa-linkedin"></i> Linkedin: <a href="https://www.linkedin.com/in/francisco-arroyo-de-la-torre-089065163" target="_blank">Francisco Arroyo De La Torre</a></strong></li>
+                        <li><strong><i class="fab fa-facebook"></i> Facebook: <a href="https://www.facebook.com/profile.php?id=61550248633118" target="_blank">Francisco Arroyo De La Torre</a></strong></li>
                         <li><strong><i class="fas fa-envelope"></i> Correo Alternativo: frankarroyop@gmail.com</strong></li>
                     </ul>
                 </div>
@@ -72,9 +73,9 @@
         <div class="col-md-4">
           <h5>Síguenos</h5>
           <ul class="list-inline">
-            <li class="list-inline-item"><a href="#" class="text-white"><i class="fab fa-facebook fa-3x"></i></a></li>
-            <li class="list-inline-item"><a href="#" class="text-white"><i class="fab fa-twitter fa-3x"></i></a></li>
-            <li class="list-inline-item"><a href="https://www.instagram.com/tupaginaweb" class="text-white"><i class="fab fa-instagram fa-3x"></i></a></li>
+            <li class="list-inline-item"><a href="https://www.facebook.com/profile.php?id=61550248633118" class="text-white"><i class="fab fa-facebook fa-3x"></i></a></li>
+            <li class="list-inline-item"><a href="https://www.instagram.com/tupaginawebonline/" class="text-white"><i class="fab fa-instagram fa-3x"></i></a></li>
+            <li class="list-inline-item"><a href="https://www.linkedin.com/in/francisco-arroyo-de-la-torre-089065163" class="text-white"><i class="fab fa-linkedin fa-3x"></i></a></li>
           </ul>
         </div>
       </div>
